Oct 10, 2002: Alex Burger <alex@fragit_dot_net>
- Added support of 'Show only configured games' to Add Master window
  Add Server window and Statistics page

Oct 10, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS and TODO
- added script 'vc' to automate editing this file
- remove instructions for Half-Life hack from docu
- access functions for game specific attributes

Oct 09, 2002: Alex Burger <alex@fragit_dot_net>
- Added password support to Unreal based games (games that use
  un_exec - Unreal, UT 2003, Rune)
- Changed UT 2003 icon to have a #2 at the bottom right hand corner.
  I used KEdit which seams to have changed the format of the file, but it
  still looks fine in XQF.
- Changed Unreal / UT icon to UT 2003 icon (without a number)
- Changed Unreal name to 'Unreal / UT'

Oct 04, 2002: Alex Burger <alex@fragit_dot_net>
- Added Preferences Appearance option of 'Show only configured games'.
  Masters added will still be stored, but only displayed on the screen
  if the command line for the game is configured.  Defaults to false.
  I was tired of scrolling past games I don't have.
- Changed source_ctree_remove_master_group() to not be static.

Oct 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Q3 protocol 68

Oct 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- clean up sound code
- increased version to 0.9.9.2 to make UT2003 server lists visible.
  Note for those using the CVS Version: You need a qstat that supports 'ut2s'
  as gametype. You can generate a suitable config file at
  http://qstat.uglypunk.com/. Keep in mind that you may have to remove the file
  when a new qstat version is released!

Oct 04, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- modified that ugly ut2 master hack a little

Oct 04, 2002: Alex Burger <alex@fragit_dot_net>
- Added support for UT 2003 http masters (not the same as the other
  http formats) and added full and demo Epic masters
- Fixed UT 2003 password column (servers use password=0/1 instead of